Better, auto-refreshing system status
