# spec/swagger.yaml
@@ -91,7 +91,7 @@ paths:
       responses:
         '200':
           description:
-            "The server was able to parse the response and handled it accordingly."
+            "The server was able to parse the request and handled it accordingly."
           schema:
             $ref: '#/definitions/StatusResponse'
 definitions:
@@ -361,3 +361,8 @@ definitions:
         example: 13
         description:
           "The number of scans that have been submitted with a scan_start time newer than cycle_start_time"
+      avg_cycle_duration:
+        type: string
+        example: "13d, 14h, 15m, 16s"
+        description:
+          "A human readable string measuring the average duration per completed scan cycle"
